# Client-Server

./: README.md
Client PC/: CMakeLists.txt  client.cpp  client.h  main.cpp
Server PC/: CMakeLists.txt  common.cpp  common.h  main.cpp  server.cpp  server.h
